--- a/indecision-app/.gitignore
+++ b/indecision-app/.gitignore
@@ -1,30 +1,30 @@
-# Node.js
-/node_modules/
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# Build output
-/dist/
-/build/
-/.eslintcache
-
-# IDEs y editores de código
-/.idea/
-/.vscode/
-
-# Archivos de sistema
+node_modules
 .DS_Store
-Thumbs.db
+dist
+dist-ssr
+coverage
+*.local
 
-# Archivos de configuración de dependencias
-/package-lock.json
-/yarn.lock
+/cypress/videos/
+/cypress/screenshots/
 
-# Archivos de entorno
-.env
-.env.local
-.env.*.local
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
 
-# Directorios de cache
-/.cache/
-
-# Archivos de pruebas
-/coverage/
+*.tsbuildinfo
