--- a/indecision-app/package.json
+++ b/indecision-app/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.6",
+    "axios": "^1.8.4",
     "tailwindcss": "^4.0.6",
     "vue": "^3.5.13"
   },
